--- a/Final_AED_Project/src/UserInterface/Physician/DoctorSideNavWorkAreaJpanel.form
+++ b/Final_AED_Project/src/UserInterface/Physician/DoctorSideNavWorkAreaJpanel.form
@@ -98,13 +98,16 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="SansSerif" size="14" style="1"/>
+              <Font name="SansSerif" size="24" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Doctor portal"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="80" y="50" width="120" height="30"/>
+              <AbsoluteConstraints x="50" y="40" width="160" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
