--- a/Final_AED_Project/src/UserInterface/Pharmacy/PharmacySideNavWorkAreaJpanel.form
+++ b/Final_AED_Project/src/UserInterface/Pharmacy/PharmacySideNavWorkAreaJpanel.form
@@ -98,13 +98,16 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="SansSerif" size="14" style="1"/>
+              <Font name="SansSerif" size="18" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Pharmacy !!"/>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Pharmacy Portal!"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="70" y="30" width="140" height="30"/>
+              <AbsoluteConstraints x="50" y="40" width="160" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
