--- a/Final_AED_Project/src/UserInterface/Patient/PatientSideNavWorkAreaJpanel.form
+++ b/Final_AED_Project/src/UserInterface/Patient/PatientSideNavWorkAreaJpanel.form
@@ -226,7 +226,7 @@
     <Container class="javax.swing.JPanel" name="systemAdminPanel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="51" green="51" red="d7" type="rgb"/>
+          <Color blue="33" green="33" red="0" type="rgb"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[1338, 840]"/>
