PR Functional changes in login

--- a/Final_AED_Project/src/UserInterface/LoginJPanel.form
+++ b/Final_AED_Project/src/UserInterface/LoginJPanel.form
@@ -67,7 +67,7 @@
         <Component class="javax.swing.JLabel" name="greetingUserLabel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="33" green="33" red="0" type="rgb"/>
+              <Color blue="ff" green="cc" red="cc" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Lucida Grande" size="18" style="1"/>
@@ -207,7 +207,7 @@
                               <Component id="loginJButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="99" max="32767" attributes="0"/>
+                      <EmptySpace pref="98" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
